# starting-ragchatbot-codebase

./: CLAUDE.md  README.md  frontend-changes.md  pyproject.toml  sync-claude-history.sh
.claude/: settings.json
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_data_loading.py  test_final_verification.py  test_helpers.py  test_rag_system.py  test_specific_failures.py
claude-history/-Users-chris-work-claude-code-course-starting-ragchatbot-codebase/: 1c7644e6-81bc-445b-8182-41b724c7eb31.jsonl  1c7c143a-3bc2-47e3-b4dd-53dff7b41b18.jsonl  3687ff17-3a05-4e93-882f-0042128db43f.jsonl  4452103f-eac5-4410-b255-1a9f43086873.jsonl  51c2bf6e-becc-46cc-8d38-e1dcb4960ad5.jsonl  526c1ffe-e37c-47fc-a302-6114bdce657d.jsonl  5ae3a8a8-e494-4ca4-871b-91e8ca94e180.jsonl  63f2b36e-1c77-4d8d-82c3-a39c495839e8.jsonl  770db00c-9b5c-44f8-a9ce-9cb3d5101ec1.jsonl  785e8940-db80-4fe2-8d8f-36e32d3cc86c.jsonl  7b386c69-664e-4975-95d3-e75a0f05f2da.jsonl  82d1032d-0e19-454d-88f1-f6bc49866aae.jsonl  86b5f369-ceda-4423-b038-dd00d19006e3.jsonl  9fa4330d-5d0b-46c9-b7d7-c056dc38e94a.jsonl  a183552a-e127-4470-a5c5-549323f56fb1.jsonl  b29e9b91-1f26-46a0-b2b6-c1f9ee77b3f8.jsonl  c3fb7015-554c-4371-9fd7-201a230eeb15.jsonl  dd7f4847-23f0-4083-9fa3-40529e4dd6f5.jsonl  dec868be-a309-4e0a-8187-b3966cfdc8cd.jsonl  fa013733-3d5a-4606-bab7-4bc738340915.jsonl
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality_check.py
